force-app/main/default/objects/Inspection__c/fields/Reduction_Requested__c.field-meta.xml
<CustomField>
    <fullName>Reduction_Requested__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checked if Reduction is requested</description>
    <label>Reduction Requested</label>
    <type>Checkbox</type>
</CustomField>