force-app/main/default/objects/Inspection__c/fields/Rental_Comparables_Analyst__c.field-meta.xml
<CustomField>
    <fullName>Rental_Comparables_Analyst__c</fullName>
    <formula>Prospect_ID__r.Rent_Comparables_Analyst__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Rental Comparables @ Analyst</label>
    <type>Text</type>
</CustomField>