force-app/main/default/objects/Inspection__c/fields/Repair_Director__c.field-meta.xml
<CustomField>
    <fullName>Repair_Director__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Gives Repair Director&apos;s name</description>
    <inlineHelpText>Lookup to User</inlineHelpText>
    <label>Repair Director</label>
    <referenceTo>User</referenceTo>
    <relationshipName>HHM_Inspection1</relationshipName>
    <type>Lookup</type>
</CustomField>