force-app/main/default/objects/Inspection__c/fields/Repair_Director_Email__c.field-meta.xml
<CustomField>
    <fullName>Repair_Director_Email__c</fullName>
    <formula>Repair_Director__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Repair Director Email</label>
    <type>Text</type>
</CustomField>