force-app/main/default/objects/Inspection__c/fields/Repair_Director_Phone__c.field-meta.xml
<CustomField>
    <fullName>Repair_Director_Phone__c</fullName>
    <formula>Repair_Director__r.Phone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Repair Director Phone</label>
    <type>Text</type>
</CustomField>