force-app/main/default/objects/Inspection__c/fields/Repair_Estimator__c.field-meta.xml
<CustomField>
    <fullName>Repair_Estimator__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Gives Repair Estimator&apos;s name</description>
    <inlineHelpText>Lookup to User</inlineHelpText>
    <label>Repair Estimator</label>
    <referenceTo>User</referenceTo>
    <relationshipName>HHM_Inspection4</relationshipName>
    <type>Lookup</type>
</CustomField>