force-app/main/default/objects/Inspection__c/fields/Repair_Estimator_Date__c.field-meta.xml
<CustomField>
    <fullName>Repair_Estimator_Date__c</fullName>
    <description>Gives Repair Estimator&apos;s approval date</description>
    <label>Repair Estimator Date</label>
    <type>Date</type>
</CustomField>