force-app/main/default/objects/Inspection__c/fields/Repair_Estimator_Email__c.field-meta.xml
<CustomField>
    <fullName>Repair_Estimator_Email__c</fullName>
    <description>Gives the Repair Estimator&apos;s Email address</description>
    <formula>Repair_Estimator__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Repair Estimator Email</label>
    <type>Text</type>
</CustomField>