force-app/main/default/objects/Inspection__c/fields/Repair_Estimator_Name__c.field-meta.xml
<CustomField>
    <fullName>Repair_Estimator_Name__c</fullName>
    <formula>Repair_Estimator__r.FirstName + &quot; &quot; +  Repair_Estimator__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Repair Estimator Name</label>
    <type>Text</type>
</CustomField>