force-app/main/default/objects/Inspection__c/fields/Repair_Estimator_Phone__c.field-meta.xml
<CustomField>
    <fullName>Repair_Estimator_Phone__c</fullName>
    <description>Gives Repair Estimator&apos;s phone number</description>
    <formula>Repair_Estimator__r.Phone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Repair Estimator Phone</label>
    <type>Text</type>
</CustomField>