force-app/main/default/objects/Inspection__c/fields/Repair_Manager__c.field-meta.xml
<CustomField>
    <fullName>Repair_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Gives Repair Manger&apos;s name</description>
    <inlineHelpText>Lookup to User</inlineHelpText>
    <label>Repair Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>HHM_Inspection2</relationshipName>
    <type>Lookup</type>
</CustomField>