force-app/main/default/objects/Inspection__c/fields/Repair_Manager_Date__c.field-meta.xml
<CustomField>
    <fullName>Repair_Manager_Date__c</fullName>
    <description>Gives Repair Manager&apos;s approval date</description>
    <label>Repair Manager Date</label>
    <type>Date</type>
</CustomField>