force-app/main/default/objects/Inspection__c/fields/Repair_Manager_Email__c.field-meta.xml
<CustomField>
    <fullName>Repair_Manager_Email__c</fullName>
    <formula>Repair_Manager__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Repair Manager Email</label>
    <type>Text</type>
</CustomField>