force-app/main/default/objects/Inspection__c/fields/Repair_Manager_Phone__c.field-meta.xml
<CustomField>
    <fullName>Repair_Manager_Phone__c</fullName>
    <formula>Repair_Manager__r.Phone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Repair Manager Phone</label>
    <type>Text</type>
</CustomField>