force-app/main/default/objects/Inspection__c/fields/Revised_Inspection__c.field-meta.xml
<CustomField>
    <fullName>Revised_Inspection__c</fullName>
    <description>Gives details about the revised inspection</description>
    <label>Revised Inspection</label>
    <length>255</length>
    <type>Text</type>
</CustomField>