force-app/main/default/objects/Inspection__c/fields/Revision_Date__c.field-meta.xml
<CustomField>
    <fullName>Revision_Date__c</fullName>
    <description>Gives the Revision date</description>
    <label>Revision Date</label>
    <type>Date</type>
</CustomField>