force-app/main/default/objects/Inspection__c/fields/Sub_Market__c.field-meta.xml
<CustomField>
    <fullName>Sub_Market__c</fullName>
    <formula>Prospect_ID__r.Sub_Market__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sub Market</label>
    <type>Text</type>
</CustomField>