force-app/main/default/objects/Inspection__c/fields/Submit_Date__c.field-meta.xml
<CustomField>
    <fullName>Submit_Date__c</fullName>
    <description>Gives the Inspection submit date</description>
    <label>Submit Date</label>
    <type>Date</type>
</CustomField>