force-app/main/default/objects/Inspection__c/fields/Target_Rehab_Complete_Date__c.field-meta.xml
<CustomField>
    <fullName>Target_Rehab_Complete_Date__c</fullName>
    <formula>Initial_Rehab_ID__r.Pre_Con_Meeting_Date__c+CEILING(Bid_Recommendation__c / 850)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Target Rehab Complete Date</label>
    <type>Date</type>
</CustomField>