force-app/main/default/objects/Inspection__c/fields/Tenant_Move_out_Date__c.field-meta.xml
<CustomField>
    <fullName>Tenant_Move_out_Date__c</fullName>
    <description>Gives the Tenant Move-out Date</description>
    <formula>Pipeline_ID__r.Leaseback_TIP_Lease_Expiration_Date__c</formula>
    <label>Tenant Move-out Date</label>
    <type>Date</type>
</CustomField>