force-app/main/default/objects/Inspection__c/fields/Test_Check__c.field-meta.xml
<CustomField>
    <fullName>Test_Check__c</fullName>
    <label>Test Check</label>
    <length>255</length>
    <type>Text</type>
</CustomField>