force-app/main/default/objects/Inspection__c/fields/TIP_Notes__c.field-meta.xml
<CustomField>
    <fullName>TIP_Notes__c</fullName>
    <formula>Pipeline_ID__r.TIP_Notes__c</formula>
    <label>TIP Notes</label>
    <type>Text</type>
</CustomField>