force-app/main/default/objects/Inspection__c/fields/Upload_To_AWS__c.field-meta.xml
<CustomField>
    <fullName>Upload_To_AWS__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Upload To AWS</label>
    <type>Checkbox</type>
</CustomField>