force-app/main/default/objects/Inspection__c/fields/Utility_Notes__c.field-meta.xml
<CustomField>
    <fullName>Utility_Notes__c</fullName>
    <label>Utility Notes</label>
    <type>TextArea</type>
</CustomField>