force-app/main/default/objects/Inspection__c/fields/Vendor_Bid_Submission_Complete__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Bid_Submission_Complete__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Vendor Bid Submission Complete</label>
    <type>Checkbox</type>
</CustomField>