force-app/main/default/objects/Inspection__c/fields/Violations__c.field-meta.xml
<CustomField>
    <fullName>Violations__c</fullName>
    <formula>Pipeline_ID__r.Violations__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Violations</label>
    <type>Checkbox</type>
</CustomField>