force-app/main/default/objects/Inspection__c/fields/Violations_Comments__c.field-meta.xml
<CustomField>
    <fullName>Violations_Comments__c</fullName>
    <formula>Pipeline_ID__r.Violations_Comments__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Violations Comments</label>
    <type>Text</type>
</CustomField>