force-app/main/default/objects/Inspection__c/fields/Walk_Notes__c.field-meta.xml
<CustomField>
    <fullName>Walk_Notes__c</fullName>
    <description>Gives the notes captured during the Inspection bid walk</description>
    <label>Walk Notes</label>
    <type>TextArea</type>
</CustomField>