force-app/main/default/objects/Inspection__c/fields/Work_Authorization_Amount__c.field-meta.xml
<CustomField>
    <fullName>Work_Authorization_Amount__c</fullName>
    <formula>Bid_Recommendation__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Work Authorization Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>