force-app/main/default/objects/Inspection__c/fields/Work_Authorization_Amount_Old__c.field-meta.xml
<CustomField>
    <fullName>Work_Authorization_Amount_Old__c</fullName>
    <label>Work Authorization Amount - Old</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>