force-app/main/default/objects/Inspection__c/fields/Work_Authorization_Date_Issued__c.field-meta.xml
<CustomField>
    <fullName>Work_Authorization_Date_Issued__c</fullName>
    <label>Work Authorization Date Issued</label>
    <type>Date</type>
</CustomField>