force-app/main/default/objects/Inspection__c/fields/Work_Authorization_Date_Signed__c.field-meta.xml
<CustomField>
    <fullName>Work_Authorization_Date_Signed__c</fullName>
    <label>Work Authorization Date Signed</label>
    <type>Date</type>
</CustomField>