force-app/main/default/objects/Inspection__c/fields/Work_Authorization_Form_Status__c.field-meta.xml
<CustomField>
    <fullName>Work_Authorization_Form_Status__c</fullName>
    <formula>IF(AND(doCreateWAF__c = TRUE ,NOT(ISBLANK(Work_Authorization_Date_Signed__c))),&quot;WA Created and Signed&quot;,
			IF(AND(doCreateWAF__c = FALSE ,NOT(ISBLANK(Work_Authorization_Date_Signed__c))),&quot;WA Signed | WA not generated in SF&quot;,
							IF(AND(doCreateWAF__c = TRUE ,ISBLANK(Work_Authorization_Date_Signed__c)),&quot;WA Issued and Pending Signature&quot;,&quot;Not Created&quot;)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Work Authorization Form Status</label>
    <type>Text</type>
</CustomField>