force-app/main/default/objects/Inspection__c/recordTypes/Inspection_Read_Only.recordType-meta.xml
<RecordType>
    <fullName>Inspection_Read_Only</fullName>
    <active>true</active>
    <description>Inspection Record Type with Read Only access</description>
    <label>Inspection - Read Only</label>
</RecordType>