force-app/main/default/objects/Inspection__c/recordTypes/Inspection_Read_Write.recordType-meta.xml
<RecordType>
    <fullName>Inspection_Read_Write</fullName>
    <active>true</active>
    <description>Inspection Record Type with Read/Write access</description>
    <label>Inspection - Read/Write</label>
</RecordType>